<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">MapboxU</string>
    <string name="acces_token">
        pk.eyJ1IjoiamVzdXNkZXYiLCJhIjoiY2pzMDRoNzJpMThkeTQzb2NudTE4MDQ0OCJ9.wnHtztuA-HvbSSmSU7gGmQ
    </string>
    <string name="navegar">Navegar</string>
    <string name="buscar">Buscar</string>
    <string name="offline">Guardar</string>
    <string name="listado">Listado</string>

    <string name="user_location_permission_explanation">Esta app necesita los permisos de localización para poder funcionar correctamente</string>
    <string name="user_location_permission_not_granted">No has aceptado los permisos de localización</string>
    <string name="no_picture_in_picture_support">Tu versión no soporta el modo "Imagen en Imagen"</string>


    <!-- MAIN ACTIVITY -->
    <string name="geojsonLimit">https://bit.ly/limitemad</string>
    <string name="minimapa">Minimapa</string>

    <!-- FILTER FOR ROUTE -->
    <string name="defecto">Por defecto</string>
    <string name="coche">Coche</string>
    <string name="bicicleta">Bicicleta</string>
    <string name="caminando">Caminando</string>
    <string name="info">Información</string>

    <!-- INFO SCREEN -->
    <string name="version">Versión</string>
    <string name="versionNum">1.0-beta04</string>
    <string name="ultimaActualizacion">Última Actualización</string>
    <string name="fechaUpdate">01 abril 2019</string>
    <string name="develop">Desarrollada por Jéluchu</string>
    <string name="descripcion">
        Se trata de un navegador móvil en el
        cuál puedes guardar rutas sin conexión,
        además de ver el tráfico a tiempo real.
    </string>
    <string name="url_github">https://github.com/Jeluchu/mapboxU</string>
    <string name="filtrado">Filtrado</string>

    <string name="cero">0</string>

</resources>
