<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorWhite"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

        <include layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/spacing_xlarge"
                android:paddingBottom="?attr/actionBarSize"
                android:orientation="vertical"
                tools:ignore="UselessParent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/colorPrimary"
                    app:fontFamily="@font/productbold"
                    tools:ignore="PrivateResource"/>

            <View
                    android:layout_width="120dp"
                    android:layout_height="3dp"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:background="@color/colorPrimary" />

            <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        app:fontFamily="@font/productbold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorPrimary" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/versionNum"
                        app:fontFamily="@font/productregular"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ultimaActualizacion"
                        app:fontFamily="@font/productbold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorPrimary" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fechaUpdate"
                        app:fontFamily="@font/productregular"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mxlarge" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion"
                    app:fontFamily="@font/productregular"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimary" />

            <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mxlarge" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/develop"
                    app:fontFamily="@font/productbold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimary" />


        </LinearLayout>

    </RelativeLayout>

</LinearLayout>